--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,55 @@
 #root {
   width: 100vw;
-  padding: 10px;
   font-family: "Oldenburg", serif;
   font-style: normal;
+}
+
+body {
+  overflow-x: hidden;
 }
 .cherry-font {
   font-family: "Cherry Bomb One", system-ui;
   font-style: normal;
 }
+.accent {
+  font-weight: 700;
+  color: #008bf6;
+}
+p {
+  margin-top: 5px;
+}
 h2 {
   font-size: 6rem;
   letter-spacing: 2px;
 }
-
+h4,
+h3 {
+  font-family: "Cherry Bomb One", system-ui;
+  font-size: 2rem;
+  color: #20b5fa;
+}
+h3 {
+  font-size: 3rem;
+  text-align: center;
+}
+h6 {
+  display: block;
+  border-bottom: 1px solid black;
+  border-top: 1px solid black;
+  margin-top: 10px;
+  font-weight: 700;
+}
+tr {
+  border: 1px solid black;
+  padding: 5px;
+  text-align: center;
+  font-weight: 700;
+}
+td {
+  border: 1px solid black;
+  padding: 5px;
+  font-weight: 400;
+}
 .content-font {
   font-family: "Oldenburg", serif;
   font-style: normal;
@@ -34,6 +71,18 @@ h2 {
 }
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
+}
+.quicklink {
+  color: #fff;
+  background-color: #20b5fa;
+  border: 2px solid #20b5fa;
+  padding: 5px 10px;
+  border-radius: 20px;
+  font-weight: 700;
+}
+.quicklink:hover {
+  background-color: transparent;
+  color: #20b5fa;
 }
 
 @keyframes logo-spin {
@@ -78,6 +127,35 @@ h2 {
   h2 {
     font-size: 4rem;
   }
+  body {
+    font-size: 14px;
+  }
+  .quicklink {
+    font-size: 14px;
+  }
+}
+
+/* Target the scrollbar track */
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+/* Track background */
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+/* Scrollbar thumb */
+::-webkit-scrollbar-thumb {
+  background-color: #83d6fc; /* violet-500 */
+  border-radius: 4px;
+  border: 2px solid #f0f0f0;
+}
+
+/* On hover */
+::-webkit-scrollbar-thumb:hover {
+  background-color: #20b5fa; /* violet-600 */
 }
 
 @import "tailwindcss";
