--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,20 @@ body {
   font-weight: 700;
   color: #008bf6;
 }
+ul {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding-left: 2rem;
+}
+li {
+  margin-top: 5px;
+}
+
+li::before {
+  content: "❤︎";
+  margin-right: 0.5em;
+}
+
 p {
   margin-top: 5px;
 }
@@ -32,6 +46,7 @@ h3 {
   font-size: 3rem;
   text-align: center;
 }
+
 h6 {
   display: block;
   border-bottom: 1px solid black;
@@ -39,14 +54,22 @@ h6 {
   margin-top: 10px;
   font-weight: 700;
 }
+table {
+  margin: 10px auto;
+}
 tr {
-  border: 1px solid black;
+  border: 1px solid #20b5fa;
   padding: 5px;
   text-align: center;
   font-weight: 700;
 }
+.tr-blue {
+  background-color: #20b5fa;
+  color: #fff;
+  font-weight: 700;
+}
 td {
-  border: 1px solid black;
+  border: 1px solid #20b5fa;
   padding: 5px;
   font-weight: 400;
 }
@@ -108,33 +131,6 @@ td {
   color: #888;
 }
 
-/*PHONES */
-@media screen and (max-width: 400px) {
-  .header_container {
-    height: 300px;
-  }
-  h2 {
-    font-size: 3rem;
-    letter-spacing: 2px;
-  }
-}
-
-/*TABLET*/
-@media screen and (max-width: 768px) {
-  .header_container {
-    height: 500px;
-  }
-  h2 {
-    font-size: 4rem;
-  }
-  body {
-    font-size: 14px;
-  }
-  .quicklink {
-    font-size: 14px;
-  }
-}
-
 /* Target the scrollbar track */
 ::-webkit-scrollbar {
   width: 8px;
@@ -156,6 +152,63 @@ td {
 /* On hover */
 ::-webkit-scrollbar-thumb:hover {
   background-color: #20b5fa; /* violet-600 */
+}
+
+/*FLOATING ANIMATION */
+.float {
+  animation-name: floating;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+}
+
+@keyframes floating {
+  0% {
+    transform: translate(0, 0px);
+  }
+  50% {
+    transform: translate(0, 5px);
+  }
+  100% {
+    transform: translate(0, -0px);
+  }
+}
+
+/*PHONES */
+@media screen and (max-width: 400px) {
+  .header_container {
+    height: 300px;
+  }
+  h2 {
+    font-size: 3rem;
+    letter-spacing: 2px;
+  }
+  p {
+    text-align: center;
+  }
+  h6 {
+    text-align: center;
+  }
+  h2 {
+    font-size: 3rem !important;
+    letter-spacing: 2px;
+  }
+}
+
+/*TABLET*/
+@media screen and (max-width: 768px) {
+  .header_container {
+    height: 500px;
+  }
+  h2 {
+    font-size: 4rem;
+  }
+  body {
+    font-size: 14px;
+  }
+  .quicklink {
+    font-size: 14px;
+  }
 }
 
 @import "tailwindcss";
